--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -5,8 +5,9 @@
 <div class="row">
   <div class="col">
     <!-- SearchBox -->
+    <!-- (onValue)="searchByCapital($event)" -->
     <shared-search-box
-    (onValue)="searchByCapital($event)"
+    (onDebounce)="searchByCapital( $event )"
     placeholder="Buscar por Capital"></shared-search-box>
   </div>
 </div>
@@ -15,6 +16,7 @@
   <div class="col">
     <!-- Results Table-->
     <hr>
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
     <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
