--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -43,6 +43,10 @@
         <span class="badge bg-primary m-1">{{ country.translations['kor'].common}}</span>
         <span class="badge bg-primary m-1">{{ country.translations['per'].common}}</span>
         <span class="badge bg-primary m-1">{{ country.translations['ita'].common}}</span>
+        <span class="badge bg-primary m-1">{{ country.translations['deu'].common}}</span>
+        <span class="badge bg-primary m-1">{{ country.translations['ces'].common}}</span>
+        <span class="badge bg-primary m-1">{{ country.translations['bre'].common}}</span>
+        <span class="badge bg-primary m-1">{{ country.translations['cym'].common}}</span>
 
       </div>
     </div>
