--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -6,7 +6,8 @@
   <div class="col">
     <!-- SearchBox -->
     <shared-search-box
-    (onValue)="searchByCountry($event)"
+    (onDebounce)="searchByCountry($event)"
+    [initialValue]="initialValue"
     placeholder="Buscar por País"></shared-search-box>
   </div>
 </div>
@@ -15,6 +16,7 @@
   <div class="col">
     <!-- Results Table-->
     <hr>
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
     <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
