--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -4,6 +4,7 @@
 type="text"
 class="form-control"
 [placeholder]="placeholder"
+[value]="initialValue"
 (keyup)="onKeyPress(txtInput.value)"
 #txtInput
 >
